--- a/app/src/main/res/layout/viewholder_color.xml
+++ b/app/src/main/res/layout/viewholder_color.xml
@@ -1,9 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="35dp"
-    android:id="@+id/colorLayout"
-    android:layout_marginHorizontal="2dp"
-    android:background="@drawable/size_selected"
-    android:layout_height="35dp">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="40dp"
+    android:layout_height="40dp"
+    android:layout_marginHorizontal="4dp">
 
-</ImageView>
+    <View
+        android:id="@+id/colorView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/color_unselected_bg" />
+
+    <ImageView
+        android:id="@+id/selector"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_gravity="center"
+        android:src="@drawable/ic_check"
+        android:visibility="gone"
+        app:tint="@color/white" />
+
+</FrameLayout>
