--- a/app/src/main/res/layout/viewholder_order_summary.xml
+++ b/app/src/main/res/layout/viewholder_order_summary.xml
@@ -4,15 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:gravity="center_vertical"
     android:orientation="horizontal"
     android:paddingTop="8dp"
-    android:paddingBottom="8dp"
-    android:gravity="center_vertical">
+    android:paddingBottom="8dp">
 
     <ImageView
         android:id="@+id/pic"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:background="@drawable/grey_bg"
         android:padding="4dp"
         app:srcCompat="@drawable/pic" />
@@ -20,27 +20,52 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:layout_marginStart="16dp"
+        android:layout_weight="1"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/titleTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="Title of the product goes here"
-            android:maxLines="2"
             android:ellipsize="end"
+            android:maxLines="2"
             android:textColor="@color/black"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            tools:text="Title of the product goes here" />
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/sizeTxt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:textColor="@color/orange"
+                android:textSize="12sp"
+                tools:text="Size: M" />
+
+            <TextView
+                android:id="@+id/colorTxt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:textSize="12sp"
+                tools:text="Màu: #FF5733" />
+
+        </LinearLayout>
         <TextView
             android:id="@+id/quantityTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="SL: 1"
+            android:layout_marginTop="4dp"
+            android:textColor="@color/black"
             android:textSize="12sp"
-            android:textColor="@color/black"/>
+            tools:text="Số lượng: 1" />
     </LinearLayout>
 
     <TextView
@@ -48,7 +73,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        tools:text="150.000đ"
         android:textColor="@color/black"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        tools:text="150.000đ" />
 </LinearLayout>
